# dedekind

./: .clang-format  .coverage  .gitignore  .gitmodules  CITATION.cff  CMakeGraphVizOptions.cmake  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  Makefile  PR_SUMMARY.md  README.md  build.sh  codecov.yml  compute_checksum.py  default.profraw  dependencies.py  dependencies_clustered.py  issue_186_body.md  issue_186_body_after.md  issue_186_body_updated.md  nn_notes.md  pom.xml  pyproject.toml
.githooks/: pre-push
.github/: CODEOWNERS
.github/copilot/housekeeping/: jq-forward.sh  pr-init.sh  pr-status-all.sh  pruning-ir-fixture.py  python-coverage.sh
.github/instructions/: *.instructions.md  CULTURAL_EMBEDDING.instructions.md  commands.instructions.md  copilot.instructions.md
.github/workflows/: cmake.yml  maven.yml
build-python/cp313-cp313-macosx_15_0_x86_64/: .ninja_deps  .ninja_log  .skbuild-info.json  CMakeCache.txt  CMakeInit.txt  CTestTestfile.cmake  Doxyfile.docs  build.ninja  cmake_install.cmake  compile_commands.json  test_algebra  test_category  test_ieee  test_morphologies  test_order  test_sequences  test_sets  test_topology
build-python/cp313-cp313-macosx_15_0_x86_64/ext/nanobind/: CTestTestfile.cmake  cmake_install.cmake
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build3/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
dedekind-core/: pom.xml
dedekind-matrices/: README.md  pom.xml
dedekind-ontology/: README.md  pom.xml
docs/design/: carrier-lattice.md  lift-unification.md
docs/paper/: Makefile  paper.aux  paper.out  paper.tex  references.bib
docs/paper/figures/: .dedekind_module_dependencies.dot.swp  dedekind_module_dependencies.dot  dedekind_modules.dot  dedekind_reduced.dot
docs/paper/submission/: README.md  cover_letter.md  impact_statement.md  keywords.md
docs/python/: README.md  minimal-dsl-v1-spec.md  release-checklist-v0.1.md
docs/python/notebooks/: 01_facade_roundtrip_basics.ipynb  02_facade_error_contract.ipynb  03_dsl_analyst_tier.ipynb  03_dsl_beginner_tier.ipynb  03_dsl_design_sketch_demo.ipynb  04_dsl_expert_tier.ipynb  04_dsl_formal_tier.ipynb  README.md  default.profraw
docs/report/: Makefile  references.bib  report.tex
docs/report/figures/: dependencies_clustered.py  filter.gvpr
examples/: CMakeLists.txt
examples/set-pruning-ir-demo/: iso3166_countries.cpp  pruning_noop_vs_runtime_fixture.cpp  pruning_noop_vs_runtime_fixture.ll
python/dedekind/: __init__.py  dsl.py  sequences.py  sets.py
python/dedekind/algebra/: __init__.py  polynomial.py
python/dedekind/numbers/: __init__.py  boolean.py  natural.py
src/main/modules/: dedekind.cppm
src/main/modules/dedekind/algebra/: abstract.cppm  algebra.cppm  boolean.cppm  division.cppm  euclidean.cppm  field.cppm  fields.cppm  free.cppm  galois.cppm  group.cppm  initial_ring.cppm  kleene.cppm  modules.cppm  monoid.cppm  nodes.cppm  polynomial.cppm  polynomials.cppm  quotient.cppm  registration.cppm  ring.cppm  rings.cppm  scout_algebra.cppm  universal.cppm  vectorspace.cppm
src/main/modules/dedekind/analysis/: analysis.cppm  dual.cppm  exterior.cppm  forms.cppm  ftc.cppm  hamilton.cppm  kernels.cppm
src/main/modules/dedekind/category/: .functorial.cppm.swp  action.cppm  actions.cppm  adjunction.cppm  algebra.cppm  algebra_total.cppm  cartesian.cppm  category.cppm  comonad.cppm  concrete.cppm  discrete.cppm  equivalence.cppm  etcs.cppm  f_algebra.cppm  factorisation.cppm  filtered.cppm  functor.cppm  functorial.cppm  image.cppm  kleisli.cppm  lattice.cppm  limit.cppm  limits.cppm  logic.cppm  mereology.cppm  monad.cppm  morphism.cppm  morphisms.cppm  natural.cppm  nno.cppm  numeric.cppm  partial.cppm  posetal.cppm  pullback.cppm  small.cppm  species.cppm  thin.cppm  topoi.cppm  total.cppm
src/main/modules/dedekind/geometry/: affine.cppm  euclidean.cppm  function.cppm  geometry.cppm  hilbert.cppm  inner_product.cppm  lattice.cppm  linear_map.cppm  outer_product.cppm  tangent.cppm
src/main/modules/dedekind/ieee/: approx.cppm  ieee.cppm
src/main/modules/dedekind/linear_algebra/: backends.cppm  basis.cppm  contracts.cppm  diagonal.cppm  embeddings.cppm  graphblas.cppm  invertible2x2.cppm  linear_algebra.cppm  mat2x2.cppm  matrix.cppm  tuple.cppm  vec2.cppm
src/main/modules/dedekind/morphologies/: archimedean.cppm  cauchy.cppm  cyclic.cppm  floating_point.cppm  integral.cppm  morphologies.cppm  sint.cppm  uint.cppm
src/main/modules/dedekind/numbers/: approx.cppm  boolean.cppm  booleans.cppm  cardinality.cppm  complex.cppm  constants.cppm  dual.cppm  floating_point.cppm  ieee.cppm  integer.cppm  integers.cppm  integral.cppm  lattice.cppm  logic.cppm  mandelbrot.cppm  natural.cppm  naturals.cppm  numbers.cppm  quaternion.cppm  rational.cppm  real.cppm  scalars.cppm  sint.cppm  symbolic.cppm  uint.cppm
src/main/modules/dedekind/ontology/: .ontology.cppm.swp  algebra.cppm  cardinalities.cppm  category.cppm  density.cppm  geometry.cppm  logic.cppm  mereology.cppm  morphologies.cppm  numbers.cppm  ontology.cppm  order.cppm  order_algebra.cppm  sequences.cppm  species.cppm  topolgoy.cppm  topology.cppm
src/main/modules/dedekind/optimization/: lp.cppm  optimization.cppm
src/main/modules/dedekind/order/: algebra.cppm  completeness.cppm  concepts.cppm  halfspace.cppm  lattice.cppm  nodes.cppm  order.cppm  poset.cppm  sequences.cppm  total.cppm
src/main/modules/dedekind/python/: nanobind.cpp  python.cppm
src/main/modules/dedekind/sequences/: cauchy.cppm  concepts.cppm  convergence.cppm  curve.cppm  limits.cppm  net.cppm  path.cppm  ranges.cppm  sequences.cppm
src/main/modules/dedekind/sets/: algebra.cppm  boundaries.cppm  cardinalities.cppm  cardinality.cppm  computability.cppm  expressions.cppm  family.cppm  (+13 more)
src/test/cpp/: dedekind_test.cpp
src/test/python/: python_tests.py  test_dedekind.py  test_dedekind_algebra_polynomial.py  test_dedekind_dsl.py  test_dedekind_numbers_boolean.py  test_dedekind_numbers_natural.py
(+558 files in other folders)
