cmake_minimum_required(VERSION 3.28)
project(Dedekind VERSION 1.0.0 LANGUAGES CXX)

# --- Toolchain/Platform Adjustments ---
if(APPLE)
    # Move the Makefile's "CXXFLAGS" logic here so it's not overwritten
    add_compile_options("-stdlib=libc++")
    add_link_options("-stdlib=libc++" "-L/usr/local/opt/llvm/lib")
    
    # Auto-find SDK path on Mac
    execute_process(COMMAND xcrun --sdk macosx --show-sdk-path
                    OUTPUT_VARIABLE MACOS_SDK_PATH
                    OUTPUT_STRIP_TRAILING_WHITESPACE)
    add_compile_options("-isysroot" "${MACOS_SDK_PATH}")
endif()

# --- Instrumentation and Warnings ---
# Hard-coded for Clang 21 as used in the CI pipeline
set(DEDEKIND_WARNING_FLAGS
    -Wall -Wextra -Wpedantic -Wshadow -Wunused 
    -Wunreachable-code -Wconversion -Werror
)

# --- Instrumentation (Shared by CI and Local) ---
set(DEDEKIND_COVERAGE_FLAGS -fprofile-instr-generate -fcoverage-mapping)

# 2. Use a unified "instrumentation" block for the whole project
# This ensures the profiling runtime is linked into every binary
add_compile_options(${DEDEKIND_COVERAGE_FLAGS})
add_link_options(${DEDEKIND_COVERAGE_FLAGS})

# Ensure the linker also uses the profiling runtime
add_link_options(-fprofile-instr-generate)
# Force C++23 standard for Clang 21
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# For clangd:
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# Disable global scanning to protect FetchContent/dependencies
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)

# Enable testing with Catch2:
include(FetchContent)
FetchContent_Declare(
  Catch2
  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
  GIT_TAG        v3.4.0
)

# This populates the 'catch2_SOURCE_DIR' variable
FetchContent_MakeAvailable(Catch2)

# CRITICAL: Use the variable name generated by FetchContent (lowercase)
list(APPEND CMAKE_MODULE_PATH "${catch2_SOURCE_DIR}/extras")

# This provides the catch_discover_tests command
include(Catch)

enable_testing()


# Run build on a per module basis. I.e.
# Module A -> Test A -> Module B -> Test B -> ...
# This function describes the build of one module.
# Note, there is a bit of CMake magic to cope with code coverage measurement during testing.
# The key is to link the test executable with the library target in two ways:
# 1. Link the library target normally to provide metadata (PCMs) without providing objects again. We use the INTERFACE properties of the library to avoid double-linking .o files.
# --- Global tracking for coverage ---
set_property(GLOBAL PROPERTY DEDEKIND_ALL_TEST_BINARIES "")
set_property(GLOBAL PROPERTY DEDEKIND_ALL_LIB_ARCHIVES "")

function(add_dedekind_layer LAYER_NAME DEPENDS_ON)
    set(LIB_TARGET dedekind_${LAYER_NAME})
    set(TEST_TARGET test_${LAYER_NAME})

    file(GLOB MODULE_SOURCES CONFIGURE_DEPENDS "src/main/modules/dedekind/${LAYER_NAME}/*.cppm")
    file(GLOB TEST_SOURCES   CONFIGURE_DEPENDS "src/test/cpp/modules/dedekind/${LAYER_NAME}/*_test.cpp")

    add_library(${LIB_TARGET} STATIC)
    set_target_properties(${LIB_TARGET} PROPERTIES CXX_SCAN_FOR_MODULES ON)
    target_sources(${LIB_TARGET} PUBLIC FILE_SET CXX_MODULES BASE_DIRS src/main/modules FILES ${MODULE_SOURCES})
    target_compile_options(${LIB_TARGET} PRIVATE ${DEDEKIND_WARNING_FLAGS})
    
    if(DEPENDS_ON)
        target_link_libraries(${LIB_TARGET} PUBLIC ${DEPENDS_ON})
    endif()

    add_executable(${TEST_TARGET} ${TEST_SOURCES})
    set_target_properties(${TEST_TARGET} PROPERTIES CXX_SCAN_FOR_MODULES ON)
    target_link_libraries(${TEST_TARGET} PRIVATE ${LIB_TARGET} Catch2::Catch2WithMain)

    # Instrumentation
    # Only apply the warnings here (Coverage is now global via add_compile_options)
    target_compile_options(${LIB_TARGET} PRIVATE ${DEDEKIND_WARNING_FLAGS})
    target_compile_options(${TEST_TARGET} PRIVATE ${DEDEKIND_WARNING_FLAGS})

    # Force whole-archive to ensure all module code is instrumented
    if(APPLE)
        target_link_options(${TEST_TARGET} PRIVATE "-Wl,-force_load,$<TARGET_FILE:${LIB_TARGET}>")
    else()
        target_link_options(${TEST_TARGET} PRIVATE "-Wl,--whole-archive" "$<TARGET_FILE:${LIB_TARGET}>" "-Wl,--no-whole-archive")
    endif()

    add_test(NAME ${TEST_TARGET} COMMAND ${TEST_TARGET})

    # Use an absolute path for the profile file, utilizing GITHUB_WORKSPACE if available
    if(DEFINED ENV{GITHUB_WORKSPACE})
        set(PROFILE_DIR "$ENV{GITHUB_WORKSPACE}/build")
    else()
        set(PROFILE_DIR "${CMAKE_BINARY_DIR}")
    endif()

    set_tests_properties(${TEST_TARGET} PROPERTIES 
        ENVIRONMENT "LLVM_PROFILE_FILE=${PROFILE_DIR}/dedekind-${LAYER_NAME}-%m.profraw"
    )

    # Track binaries for the final coverage report
    set_property(GLOBAL APPEND PROPERTY DEDEKIND_ALL_TEST_BINARIES $<TARGET_FILE:${TEST_TARGET}>)
    set_property(GLOBAL APPEND PROPERTY DEDEKIND_ALL_LIB_ARCHIVES $<TARGET_FILE:${LIB_TARGET}>)
endfunction()

# --- THE PROPOSITIONS (Serialized by Libraries) ---
add_dedekind_layer(category "")
add_dedekind_layer(ontology dedekind_category)
add_dedekind_layer(sets dedekind_ontology)


# --- 3. THE FINAL ASSEMBLY (The Public Interface) ---

# The book of math according to the dedekind project.
# Each chapter corresponds the book to an object file which in turn
# corresponds to a module interface unit.
# The "dedekind" library is the final product
add_library(dedekind INTERFACE)
add_dependencies(dedekind dedekind_category dedekind_ontology dedekind_sets)
# No source files needed here; it just bundles the objects
target_link_libraries(dedekind INTERFACE dedekind_ontology dedekind_sets)
target_compile_features(dedekind INTERFACE cxx_std_23)

target_compile_options(dedekind INTERFACE ${DEDEKIND_WARNING_FLAGS})

install(TARGETS dedekind dedekind_category dedekind_ontology dedekind_sets
    EXPORT dedekind-targets
    # Ensure CXX_MODULES are installed for all targets
    FILE_SET CXX_MODULES DESTINATION lib/modules/dedekind
)

install(EXPORT dedekind-targets
    FILE dedekindConfig.cmake
    NAMESPACE dedekind::
    DESTINATION lib/cmake/dedekind
)

# --- Doxygen Documentation (Maven-style) ---
find_package(Doxygen)
if (DOXYGEN_FOUND)
    # Define where Doxygen looks for code and where it outputs HTML
    set(DOXYGEN_INPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/main/modules)
    set(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/docs)

    # Customise for C++20 Modules (requires manual Doxyfile settings if needed)
    set(DOXYGEN_EXTENSION_MAPPING "cppm=C++") # Treat .cppm files as C++
    set(DOXYGEN_FILE_PATTERNS "*.cppm" "*.cpp")

    # Hide symbols not marked with 'export' or documented specifically
    set(DOXYGEN_EXTRACT_ALL NO)
    set(DOXYGEN_EXTRACT_PRIVATE NO)
    set(DOXYGEN_EXTRACT_STATIC NO)

    # Improves how Doxygen resolves imports/includes for modules
    set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
    set(DOXYGEN_CPP_CLI_SUPPORT NO)
    set(DOXYGEN_SIP_SUPPORT NO)

    # Crucial for ETCS/Topos documentation: 
    # Allows Doxygen to parse LaTeX-style math if you use it in the future
    set(DOXYGEN_USE_MATHJAX YES) 

    # Ensure the "Level" sections show up in the hierarchy
    set(DOXYGEN_TOC_INCLUDE_HEADINGS 3)

    # Automatically pulls "1.0.0" from the project() call above
    set(DOXYGEN_PROJECT_NUMBER ${PROJECT_VERSION})
    
    # Optional: Add a project brief (like a Maven description)
    set(DOXYGEN_PROJECT_BRIEF "A structuralist C++23 Module Library")
    
    # Use the FindDoxygen built-in macro to configure a Doxyfile automatically
    doxygen_add_docs(docs
        ${DOXYGEN_INPUT_DIR}
        COMMENT "Generating API documentation with Doxygen"
    )
    
endif()

get_property(ALL_TESTS GLOBAL PROPERTY DEDEKIND_ALL_TEST_BINARIES)
get_property(ALL_LIBS GLOBAL PROPERTY DEDEKIND_ALL_LIB_ARCHIVES)
# --- Find LLVM Tools (Cross-Platform) ---
find_program(LLVM_PROFDATA_TOOL NAMES llvm-profdata-21 llvm-profdata REQUIRED)
find_program(LLVM_COV_TOOL      NAMES llvm-cov-21 llvm-cov REQUIRED)

# Prepare the -object list for the command line
set(OBJ_ARGS "")
foreach(lib IN LISTS ALL_LIBS)
    list(APPEND OBJ_ARGS -object ${lib})
endforeach()

# Determine sed flag based on OS
if(APPLE)
    set(SED_INPLACE_FLAG "-i" "") # macOS requires an empty string after -i
else()
    set(SED_INPLACE_FLAG "-i")    # Linux (GNU) does not
endif()

add_custom_target(generate_coverage
    # 1. Merge the raw profiles into a single .profdata file
    COMMAND sh -c "${LLVM_PROFDATA_TOOL} merge -sparse $(find ${CMAKE_BINARY_DIR} -name '*.profraw') -o ${CMAKE_BINARY_DIR}/dedekind.profdata"
    
    # 2. Export to LCOV
    COMMAND ${LLVM_COV_TOOL} export 
        -instr-profile=${CMAKE_BINARY_DIR}/dedekind.profdata 
        -format=lcov 
        -ignore-filename-regex=".*_deps/.*|.*test/.*"
        ${ALL_TESTS} 
        ${OBJ_ARGS} > ${CMAKE_BINARY_DIR}/coverage.info
    
     # 3. Strip absolute paths using Perl (Identical syntax on Mac & Linux)
    COMMAND perl -i -pe "s|${CMAKE_SOURCE_DIR}/||g" ${CMAKE_BINARY_DIR}/coverage.info
    COMMAND perl -i -pe "s|SF:\./|SF:|g" ${CMAKE_BINARY_DIR}/coverage.info

    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    VERBATIM
    COMMENT "Generating unified LCOV coverage report..."
)