cmake_minimum_required(VERSION 3.28)
project(Dedekind VERSION 1.0.0 LANGUAGES CXX)

# --- Toolchain/Platform Adjustments ---
if(APPLE)
    # Move the Makefile's "CXXFLAGS" logic here so it's not overwritten
    add_compile_options("-stdlib=libc++")
    add_link_options("-stdlib=libc++" "-L/usr/local/opt/llvm/lib")
    
    # Auto-find SDK path on Mac
    execute_process(COMMAND xcrun --sdk macosx --show-sdk-path
                    OUTPUT_VARIABLE MACOS_SDK_PATH
                    OUTPUT_STRIP_TRAILING_WHITESPACE)
    add_compile_options("-isysroot" "${MACOS_SDK_PATH}")
endif()

# --- Instrumentation and Warnings ---
# Hard-coded for Clang 22 as used in the CI pipeline
set(DEDEKIND_WARNING_FLAGS
    -Wall -Wextra -Wpedantic -Wshadow -Wunused 
    -Wunreachable-code -Wconversion -Werror
    -Wno-c2y-extensions
)

# --- Instrumentation (Shared by CI and Local) ---
set(DEDEKIND_COVERAGE_FLAGS -fprofile-instr-generate -fcoverage-mapping)

# 2. Use a unified "instrumentation" block for the whole project
# This ensures the profiling runtime is linked into every binary
add_compile_options(${DEDEKIND_COVERAGE_FLAGS})
add_link_options(${DEDEKIND_COVERAGE_FLAGS})

# Ensure the linker also uses the profiling runtime
add_link_options(-fprofile-instr-generate)
# Force C++23 standard for Clang 21
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# For clangd:
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_CXX_EXTENSIONS OFF)
# Disable global scanning to protect FetchContent/dependencies
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)

# Optional: runtime/noinline bridge wrappers for coverage attribution in
# dedekind.category:numeric. Leave OFF for final builds (constexpr bridges).
# Usage:
#   Final/default build (constexpr bridges):
#     cmake -S . -B build -DDEDEKIND_RUNTIME_COVERAGE_BRIDGES=OFF
#   Coverage-attribution build (runtime/noinline bridges):
#     cmake -S . -B build -DDEDEKIND_RUNTIME_COVERAGE_BRIDGES=ON
option(DEDEKIND_RUNTIME_COVERAGE_BRIDGES
    "Use runtime/noinline numeric bridge wrappers for coverage attribution"
    OFF)

# Explicit policy switch: allow raw double as a machine-real proxy in geometry.
# OFF by default to keep machine-real semantics opt-in.
option(DEDEKIND_ENABLE_DOUBLE_REAL_PROXY
    "Allow double as explicit proxy for real scalars in geometry"
    OFF)

option(DEDEKIND_BUILD_PYTHON_BINDINGS
    "Build the nanobind-based Python MVP facade"
    ON)

# Enable testing with Catch2 (pinned release tag; no tracking of main).
include(FetchContent)
FetchContent_Declare(
  Catch2
    GIT_REPOSITORY https://github.com/catchorg/Catch2.git
    GIT_TAG        v3.14.0
    GIT_SHALLOW    TRUE
)

# This populates the 'catch2_SOURCE_DIR' variable
FetchContent_MakeAvailable(Catch2)

# CRITICAL: Use the variable name generated by FetchContent (lowercase)
list(APPEND CMAKE_MODULE_PATH "${catch2_SOURCE_DIR}/extras")

# This provides the catch_discover_tests command
include(Catch)

enable_testing()


# Run build on a per module basis. I.e.
# Module A -> Test A -> Module B -> Test B -> ...
# This function describes the build of one module.
# Note, there is a bit of CMake magic to cope with code coverage measurement during testing.
# The key is to link the test executable with the library target in two ways:
# 1. Link the library target normally to provide metadata (PCMs) without providing objects again. We use the INTERFACE properties of the library to avoid double-linking .o files.
# --- Global tracking for coverage ---
set_property(GLOBAL PROPERTY DEDEKIND_ALL_TEST_BINARIES "")
set_property(GLOBAL PROPERTY DEDEKIND_ALL_LIB_ARCHIVES "")

function(add_dedekind_layer LAYER_NAME DEPENDS_ON)
    set(LIB_TARGET dedekind_${LAYER_NAME})
    set(TEST_TARGET test_${LAYER_NAME})

    file(GLOB MODULE_SOURCES CONFIGURE_DEPENDS "src/main/modules/dedekind/${LAYER_NAME}/*.cppm")
    file(GLOB TEST_SOURCES   CONFIGURE_DEPENDS "src/test/cpp/modules/dedekind/${LAYER_NAME}/*_test.cpp")

    add_library(${LIB_TARGET} STATIC)
    set_target_properties(${LIB_TARGET} PROPERTIES CXX_SCAN_FOR_MODULES ON)
    target_sources(${LIB_TARGET} PUBLIC FILE_SET CXX_MODULES BASE_DIRS src/main/modules FILES ${MODULE_SOURCES})
    target_compile_options(${LIB_TARGET} PRIVATE ${DEDEKIND_WARNING_FLAGS})
    if(DEDEKIND_RUNTIME_COVERAGE_BRIDGES)
        target_compile_definitions(${LIB_TARGET}
            PRIVATE DEDEKIND_RUNTIME_COVERAGE_BRIDGES)
    endif()
    if(DEDEKIND_ENABLE_DOUBLE_REAL_PROXY)
        target_compile_definitions(${LIB_TARGET}
            PRIVATE DEDEKIND_ENABLE_DOUBLE_REAL_PROXY=1)
    endif()
    
    if(DEPENDS_ON)
        target_link_libraries(${LIB_TARGET} PUBLIC ${DEPENDS_ON})
    endif()

    if(TEST_SOURCES)
        add_executable(${TEST_TARGET} ${TEST_SOURCES})
        set_target_properties(${TEST_TARGET} PROPERTIES CXX_SCAN_FOR_MODULES ON)
        target_link_libraries(${TEST_TARGET} PRIVATE ${LIB_TARGET} Catch2::Catch2WithMain)
    endif()

    # Instrumentation
    # Only apply the warnings here (Coverage is now global via add_compile_options)
    target_compile_options(${LIB_TARGET} PRIVATE ${DEDEKIND_WARNING_FLAGS})
    if(TEST_SOURCES)
        target_compile_options(${TEST_TARGET} PRIVATE ${DEDEKIND_WARNING_FLAGS})
        if(DEDEKIND_RUNTIME_COVERAGE_BRIDGES)
            target_compile_definitions(${TEST_TARGET}
                PRIVATE DEDEKIND_RUNTIME_COVERAGE_BRIDGES)
        endif()
        if(DEDEKIND_ENABLE_DOUBLE_REAL_PROXY)
            target_compile_definitions(${TEST_TARGET}
                PRIVATE DEDEKIND_ENABLE_DOUBLE_REAL_PROXY=1)
        endif()
    endif()

    # Force whole-archive to ensure all module code is instrumented
    if(TEST_SOURCES)
        if(APPLE)
            target_link_options(${TEST_TARGET} PRIVATE "-Wl,-force_load,$<TARGET_FILE:${LIB_TARGET}>")
        else()
            target_link_options(${TEST_TARGET} PRIVATE "-Wl,--whole-archive" "$<TARGET_FILE:${LIB_TARGET}>" "-Wl,--no-whole-archive")
        endif()
    endif()

    if(TEST_SOURCES)
        add_test(NAME ${TEST_TARGET} COMMAND ${TEST_TARGET})
    endif()

    # Use an absolute path for the profile file, utilizing GITHUB_WORKSPACE if available
    if(DEFINED ENV{GITHUB_WORKSPACE})
        set(PROFILE_DIR "$ENV{GITHUB_WORKSPACE}/build")
    else()
        set(PROFILE_DIR "${CMAKE_BINARY_DIR}")
    endif()

    if(TEST_SOURCES)
        set_tests_properties(${TEST_TARGET} PROPERTIES 
            ENVIRONMENT "LLVM_PROFILE_FILE=${PROFILE_DIR}/dedekind-${LAYER_NAME}-%m.profraw"
        )
    endif()

    # Track binaries for the final coverage report
    if(TEST_SOURCES)
        set_property(GLOBAL APPEND PROPERTY DEDEKIND_ALL_TEST_BINARIES $<TARGET_FILE:${TEST_TARGET}>)
    endif()
    set_property(GLOBAL APPEND PROPERTY DEDEKIND_ALL_LIB_ARCHIVES $<TARGET_FILE:${LIB_TARGET}>)
endfunction()

# --- THE PROPOSITIONS (Serialized by Libraries) ---
add_dedekind_layer(category "")
add_dedekind_layer(ieee dedekind_category)
add_dedekind_layer(sets dedekind_ieee)
add_dedekind_layer(order dedekind_sets)
add_dedekind_layer(topology dedekind_order)
add_dedekind_layer(sequences dedekind_topology)
add_dedekind_layer(algebra dedekind_sequences)
add_dedekind_layer(morphologies dedekind_algebra)
add_dedekind_layer(geometry dedekind_morphologies)
add_dedekind_layer(numbers dedekind_geometry)
add_dedekind_layer(analysis dedekind_numbers)
add_dedekind_layer(linear_algebra dedekind_analysis)
add_dedekind_layer(optimization dedekind_linear_algebra)
add_dedekind_layer(python dedekind_optimization)

# --- IR FIXTURE FOR COMPILER OPTIMIZATION WITNESS ---
# Compile-time pruning witness for dedekind.sets: built as a static library
# for compile-command capture and LLVM IR generation by the helper script.
# Placed in the python test tree so it can resolve all module dependencies.
add_library(set-pruning-ir-fixture STATIC EXCLUDE_FROM_ALL
    src/test/cpp/modules/dedekind/python/pruning_noop_vs_runtime_fixture.cpp
    src/test/cpp/modules/dedekind/python/showcase_01_diagonal_contradiction.cpp
    src/test/cpp/modules/dedekind/python/showcase_02_lattice_singleton.cpp
    src/test/cpp/modules/dedekind/python/showcase_03_halfspace_contradiction.cpp
    src/test/cpp/modules/dedekind/python/showcase_04_halfspace_singleton.cpp
    src/test/cpp/modules/dedekind/python/showcase_05_halfspace_real_ambient.cpp
    src/test/cpp/modules/dedekind/python/showcase_06_halfspace_interval_42.cpp
    src/test/cpp/modules/dedekind/python/showcase_07_lattice_real_interval.cpp
    src/test/cpp/modules/dedekind/python/showcase_08_halfspace_2d_product.cpp)

set_target_properties(set-pruning-ir-fixture PROPERTIES
    CXX_STANDARD 23
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
    CXX_SCAN_FOR_MODULES ON)

target_compile_options(set-pruning-ir-fixture PRIVATE
    ${DEDEKIND_WARNING_FLAGS}
    -O2)

target_link_libraries(set-pruning-ir-fixture PRIVATE dedekind_python)

if(DEDEKIND_BUILD_PYTHON_BINDINGS)
    # Temporary policy: pin bindings/integration to Python 3.12 until
    # python-graphblas/llvmlite availability is stable on newer interpreters.
    find_package(Python 3.12 EXACT QUIET COMPONENTS Interpreter Development.Module)
    if(NOT Python_FOUND)
        find_package(Python COMPONENTS Interpreter QUIET)
        if(Python_Interpreter_FOUND)
            message(FATAL_ERROR
                "Python 3.12 is currently required for Dedekind Python bindings/integration tests. "
                "Found ${Python_VERSION} at ${Python_EXECUTABLE}. "
                "Activate a Python 3.12 environment (for example: python3.12 -m venv .venv312 && source .venv312/bin/activate) "
                "or configure CMake with a 3.12 interpreter.")
        else()
            message(FATAL_ERROR
                "Python 3.12 is currently required for Dedekind Python bindings/integration tests, but no Python interpreter was found.")
        endif()
    endif()
    add_subdirectory(ext/nanobind EXCLUDE_FROM_ALL)

    set(DEDEKIND_PYTHON_PACKAGE_ROOT "${CMAKE_BINARY_DIR}/python")
    set(DEDEKIND_PYTHON_PACKAGE_DIR "${DEDEKIND_PYTHON_PACKAGE_ROOT}/dedekind")

    file(MAKE_DIRECTORY "${DEDEKIND_PYTHON_PACKAGE_DIR}")
    configure_file(
        ${CMAKE_CURRENT_SOURCE_DIR}/python/dedekind/__init__.py
        ${DEDEKIND_PYTHON_PACKAGE_DIR}/__init__.py
        COPYONLY)
    configure_file(
        ${CMAKE_CURRENT_SOURCE_DIR}/python/dedekind/dsl.py
        ${DEDEKIND_PYTHON_PACKAGE_DIR}/dsl.py
        COPYONLY)

    nanobind_add_module(_dedekind PROTECT_STACK
        src/main/modules/dedekind/python/nanobind.cpp)
    set_target_properties(_dedekind PROPERTIES
        CXX_SCAN_FOR_MODULES ON
        LIBRARY_OUTPUT_DIRECTORY "${DEDEKIND_PYTHON_PACKAGE_DIR}"
        RUNTIME_OUTPUT_DIRECTORY "${DEDEKIND_PYTHON_PACKAGE_DIR}")
    target_compile_options(_dedekind PRIVATE ${DEDEKIND_WARNING_FLAGS})
    target_compile_options(_dedekind PRIVATE -Wno-sign-conversion)
    target_link_libraries(_dedekind PRIVATE dedekind_python)

    install(TARGETS _dedekind LIBRARY DESTINATION dedekind)
    install(FILES
        ${CMAKE_CURRENT_SOURCE_DIR}/python/dedekind/__init__.py
        ${CMAKE_CURRENT_SOURCE_DIR}/python/dedekind/dsl.py
        DESTINATION dedekind)

    add_test(
        NAME test_python_bindings
        COMMAND ${Python_EXECUTABLE} -m unittest discover
                -s ${CMAKE_SOURCE_DIR}/src/test/python
                -p test_*.py)
    set_tests_properties(test_python_bindings PROPERTIES
        ENVIRONMENT "PYTHONPATH=${DEDEKIND_PYTHON_PACKAGE_ROOT}")
endif()


# The book of math according to the dedekind project.
# Each chapter corresponds the book to an object file which in turn
# corresponds to a module interface unit.
# The "dedekind" library is the final product
add_library(dedekind INTERFACE)
add_dependencies(dedekind dedekind_category dedekind_ieee dedekind_sets dedekind_order dedekind_topology dedekind_sequences dedekind_algebra dedekind_morphologies dedekind_geometry dedekind_numbers dedekind_analysis dedekind_linear_algebra dedekind_python)
# No source files needed here; it just bundles the objects
target_link_libraries(dedekind INTERFACE dedekind_category dedekind_ieee dedekind_sets dedekind_order dedekind_topology dedekind_sequences dedekind_algebra dedekind_morphologies dedekind_geometry dedekind_numbers dedekind_analysis dedekind_linear_algebra dedekind_python)
target_compile_features(dedekind INTERFACE cxx_std_23)

target_compile_options(dedekind INTERFACE ${DEDEKIND_WARNING_FLAGS})

install(TARGETS dedekind dedekind_category dedekind_ieee dedekind_sets dedekind_order dedekind_topology dedekind_sequences dedekind_algebra dedekind_morphologies dedekind_geometry dedekind_numbers dedekind_analysis dedekind_linear_algebra dedekind_optimization dedekind_python
    EXPORT dedekind-targets
    # Ensure CXX_MODULES are installed for all targets
    FILE_SET CXX_MODULES DESTINATION lib/modules/dedekind
)

install(EXPORT dedekind-targets
    FILE dedekindConfig.cmake
    NAMESPACE dedekind::
    DESTINATION lib/cmake/dedekind
)

# --- Doxygen Documentation (Maven-style) ---
find_package(Doxygen)
if (DOXYGEN_FOUND)
    # Define where Doxygen looks for code and where it outputs HTML
    set(DOXYGEN_INPUT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src/main/modules)
    # DOXYGEN_OUTPUT_DIRECTORY is the variable consumed by doxygen_add_docs();
    # HTML will be written to ${DOXYGEN_OUTPUT_DIRECTORY}/html = build/docs/html.
    set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docs)

    # Customise for C++20 Modules (requires manual Doxyfile settings if needed)
    set(DOXYGEN_EXTENSION_MAPPING "cppm=C++") # Treat .cppm files as C++
    set(DOXYGEN_FILE_PATTERNS "*.cppm" "*.cpp")

    # Hide symbols not marked with 'export' or documented specifically
    set(DOXYGEN_EXTRACT_ALL NO)
    set(DOXYGEN_EXTRACT_PRIVATE NO)
    set(DOXYGEN_EXTRACT_STATIC NO)

    # Improves how Doxygen resolves imports/includes for modules
    set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
    set(DOXYGEN_CPP_CLI_SUPPORT NO)
    set(DOXYGEN_SIP_SUPPORT NO)

    # Crucial for ETCS/Topos documentation: 
    # Allows Doxygen to parse LaTeX-style math if you use it in the future
    set(DOXYGEN_USE_MATHJAX YES) 

    # Ensure the "Level" sections show up in the hierarchy
    set(DOXYGEN_TOC_INCLUDE_HEADINGS 3)

    # Automatically pulls "1.0.0" from the project() call above
    set(DOXYGEN_PROJECT_NUMBER ${PROJECT_VERSION})
    
    # Optional: Add a project brief (like a Maven description)
    set(DOXYGEN_PROJECT_BRIEF "A structuralist C++23 Module Library")
    
    # Use the FindDoxygen built-in macro to configure a Doxyfile automatically
    doxygen_add_docs(docs
        ${DOXYGEN_INPUT_DIR}
        COMMENT "Generating API documentation with Doxygen"
    )
    
endif()

get_property(ALL_TESTS GLOBAL PROPERTY DEDEKIND_ALL_TEST_BINARIES)
get_property(ALL_LIBS GLOBAL PROPERTY DEDEKIND_ALL_LIB_ARCHIVES)
# --- Find LLVM Tools (Cross-Platform) ---
find_program(LLVM_PROFDATA_TOOL NAMES llvm-profdata-22 llvm-profdata-21 llvm-profdata REQUIRED)
find_program(LLVM_COV_TOOL      NAMES llvm-cov-22 llvm-cov-21 llvm-cov REQUIRED)

# Prepare the -object list for the command line
set(OBJ_ARGS "")
foreach(lib IN LISTS ALL_LIBS)
    list(APPEND OBJ_ARGS -object ${lib})
endforeach()

# Determine sed flag based on OS
if(APPLE)
    set(SED_INPLACE_FLAG "-i" "") # macOS requires an empty string after -i
else()
    set(SED_INPLACE_FLAG "-i")    # Linux (GNU) does not
endif()

add_custom_target(generate_coverage
    # 1. Merge the raw profiles into a single .profdata file
    COMMAND sh -c "${LLVM_PROFDATA_TOOL} merge -sparse $(find ${CMAKE_BINARY_DIR} -name '*.profraw') -o ${CMAKE_BINARY_DIR}/dedekind.profdata"
    
    # 2. Export to LCOV
    COMMAND ${LLVM_COV_TOOL} export 
        -instr-profile=${CMAKE_BINARY_DIR}/dedekind.profdata 
        -format=lcov 
        -ignore-filename-regex=".*_deps/.*|.*catch2.*|.*src/test/.*|.*test/.*"
        ${ALL_TESTS} 
        ${OBJ_ARGS} > ${CMAKE_BINARY_DIR}/coverage.info
    
     # 3. Strip absolute paths using Perl (Identical syntax on Mac & Linux)
    COMMAND perl -i -pe "s|${CMAKE_SOURCE_DIR}/||g" ${CMAKE_BINARY_DIR}/coverage.info
    COMMAND perl -i -pe "s|SF:\./|SF:|g" ${CMAKE_BINARY_DIR}/coverage.info

    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    VERBATIM
    COMMENT "Generating unified LCOV coverage report..."
)
