[build-system]
requires = ["scikit-build-core>=0.9.0", "nanobind>=2.0.0"]

build-backend = "scikit-build-core.build"

[project]
requires-python = "== 3.13"
name = "dedekind"
version = "0.1.0"
dependencies = ["nanobind"]

[tool.scikit-build]
cmake.args = ["-GNinja"] # Use Ninja for Module support
ninja.make-fallback = false
