[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[project]
name = "dedekind"
version = "0.1.0a0"
description = "Python MVP bindings for the dedekind C++23 module library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "python-graphblas[default]>=2025.2.0",
]
authors = [
  { name = "Dedekind Authors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/vincentk/dedekind"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build-python/{wheel_tag}"
wheel.packages = ["python/dedekind"]
# Scope the editable / wheel install to the nanobind extension target
# only.  CMake's dependency graph still pulls in the layer libraries
# transitively (_dedekind → dedekind_python → … → dedekind_category),
# so the link is correct.  Skipped: 13 test executables (each linking
# Catch2 + multiple layer static libs) plus the IR-fixture target.
# That's where ~5–10 minutes of CI wall time go on every Python-touch
# run.  Closes #426.  `make test` continues to invoke `cmake --build`
# directly with the full target set, so the test suite is untouched.
build.targets = ["_dedekind"]

[tool.scikit-build.cmake.define]
DEDEKIND_BUILD_PYTHON_BINDINGS = "ON"
DEDEKIND_ENABLE_DOUBLE_REAL_PROXY = "ON"

[project.optional-dependencies]
graphblas = [
  "python-graphblas[default]>=2025.2.0",
]

test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "numpy>=1.21",
]

[tool.pytest.ini_options]
testpaths = ["src/test/python"]

[tool.coverage.run]
source = ["python/dedekind"]
omit = ["*/__pycache__/*"]

# Path-mapping: when CI installs the dedekind wheel into site-packages
# (or a venv), coverage records the physical site-packages paths.  This
# mapping rewrites them back to the source-tree path so:
#   * the XML's <class filename="..."> attributes reference
#     `python/dedekind/...`, satisfying the workflow gate
#     `grep -q "python/dedekind/" build/python-coverage.xml` in
#     `.github/workflows/cmake.yml`;
#   * Codecov / IDE jump-to-source resolves to the actual source files
#     rather than to read-only installed copies.
[tool.coverage.paths]
source = [
    "python/dedekind",
    "*/site-packages/dedekind",
    "*/dedekind",
]

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = "build/python-coverage.xml"